--- a/scss/_utilities.scss
+++ b/scss/_utilities.scss
@@ -3,7 +3,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;1,900&family=Playfair+Display:wght@400;500&display=swap');
  
 // Variables 
-$font: 'Montserrat', sans-serif;
+
+$font: 'Playfair Display', serif;
 $columns: 12;
 $primary-color: #FF0101;
 
