--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1469,6 +1469,9 @@ footer {
           .card{
 
             margin-left: 3rem;
+            img{
+              width:3rem;
+            }
           }
           
         }
