--- a/scss/style.scss
+++ b/scss/style.scss
@@ -940,6 +940,7 @@ footer {
     }
   }
   .call-to-action1 {
+    height: 23vh;
     .call-title {
       margin-top: 3.5rem;
       margin-bottom: 2rem;
@@ -1688,7 +1689,7 @@ footer {
         margin-top: 4rem;
       
         img {
-          margin-bottom: -2rem;
+            margin-bottom: -2rem;
           width: 20rem;
         }
         h1 {
