--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -1,6 +1,6 @@
 .contact-form {
   overflow-x: hidden;
-  background: url(../Image/contactbg.jpg) no-repeat;
+  // background: url(../Image/contactbg.jpg) no-repeat;
   background-size: cover;
   background-blend-mode: overlay;
   background-position: center center;
