--- a/scss/style.scss
+++ b/scss/style.scss
@@ -253,6 +253,7 @@ $transTime: 0.35s;
     .drop-down {
       .cards {
         .card {
+          margin-top: 2rem;
           display: grid;
           place-items: center;
           img {
@@ -284,7 +285,7 @@ $transTime: 0.35s;
               margin-top: 1rem;
               margin-bottom: 1rem;
               .drop, .drop1, .drop2,.drop3, .drop4 {
-                width: 1.5rem;
+                width: 1.2rem;
                 transition: all .5s ease-in-out;
               }
             }
@@ -397,8 +398,16 @@ $transTime: 0.35s;
   .grid_image {
     width: 100%;
     height: 100%;
+   
     object-fit: cover;
     transition: 0.5s ease-in;
+    filter: gray; /* IE6-9 */
+    -webkit-filter: grayscale(.5); 
+    /* Google Chrome, Safari 6+ & Opera 15+ */
+    -moz-filter: grayscale(100%);
+    -ms-filter: grayscale(100%);
+    -o-filter: grayscale(100%);
+    filter: grayscale(100%);
   }
 
   .grid_item {
@@ -410,6 +419,9 @@ $transTime: 0.35s;
   .grid_item:hover .grid_image {
     transform: scale(1.1);
     filter: blur(3px);
+    filter: none;
+    -webkit-filter: grayscale(0);
+  
   }
 
   .text {
@@ -628,9 +640,15 @@ $transTime: 0.35s;
     background-position: center center;
     display: grid;
     place-items: center;
+
     .contact-list {
       margin-top: 1rem;
+      display: flex;
+      gap: 2rem;
+
+
       div {
+        
         a {
           display: flex;
           align-items: center;
@@ -650,7 +668,34 @@ $transTime: 0.35s;
           }
         }
       }
+    
     }
+    .phone{
+        display: flex;
+        gap:1rem;
+
+      div {
+        
+        a {
+          display: flex;
+          align-items: center;
+          margin-bottom: 1.5rem;
+
+          .bx {
+            color: $thrid-color;
+            font-size: 1.5rem;
+          }
+          img {
+            width: 1.5rem;
+          }
+          span {
+            margin-left: 1rem;
+            color: $thrid-color;
+            font-size: 0.9rem;
+          }
+        }
+      }
+      }
     .contact-btn {
       margin-top: 1.5rem;
     }
@@ -940,7 +985,7 @@ footer {
     }
   }
   .call-to-action1 {
-    height: 23vh;
+    height: 16vh;
     .call-title {
       margin-top: 3.5rem;
       margin-bottom: 2rem;
@@ -964,7 +1009,7 @@ footer {
     }
   }
   .gallery {
-    margin-top: 10rem;
+    margin-top: 8rem;
     .container {
       h1 {
         font-size: 2rem;
@@ -976,7 +1021,7 @@ footer {
     .gallery-container {
       display: grid;
       grid-template-columns: repeat(3, 1fr);
-      grid-template-rows: repeat(1, 20vw);
+      grid-template-rows: repeat(3, 20vw);
       grid-gap: 10px;
     }
   }
@@ -1021,9 +1066,7 @@ footer {
     }
     .contact-container {
       .contact-list {
-        display: grid;
-        // place-items: center;
-        grid-template-columns: 1fr 1fr;
+        margin-top: 2rem;
 
         div {
           a {
@@ -1032,6 +1075,25 @@ footer {
             }
           }
         }
+      }
+      .phone{
+     margin-top: .5rem;
+        gap:2rem;
+
+      div {
+        
+        a {
+        
+         
+          img {
+            width: 2rem;
+          }
+          span {
+            
+            font-size: 1.2rem;
+          }
+        }
+      }
       }
       .contact-btn {
         margin-top: 2rem;
@@ -1179,7 +1241,7 @@ footer {
   }
   .call-to-action {
     margin-top: 5rem;
-    margin-bottom: 10rem;
+    margin-bottom: 5rem;
     .call-title {
       margin-left: 2rem;
       margin-right: 2rem;
@@ -1247,18 +1309,15 @@ footer {
       }
     }
   }
-  // .contact {
-  //   margin-top: 5rem;
-  //   margin-bottom: 5rem;
-  //   .contact-container {
-  //     .contact-list {
-  //       margin-left: 15rem;
-  //       img {
-  //         width: 1rem;
-  //       }
-  //     }
-  //   }
-  // }
+  .contact {
+    margin-top: 5rem;
+    margin-bottom: 5rem;
+    .contact-container {
+      .contact-list {
+    margin-top: 3rem;
+      }
+    }
+  }
   footer {
     .container {
       display: flex;
@@ -1465,6 +1524,7 @@ footer {
         }
       }
       .drop-down {
+        margin-top: 4rem;
         display:flex;
         .cards{
           .card{
@@ -1472,6 +1532,14 @@ footer {
             margin-left: 3rem;
             img{
               width:3rem;
+            }
+            .text{
+              .more-btn{
+                .drop, .drop1, .drop2,.drop3, .drop4 {
+                  width: 1.6rem;
+             
+                }
+              }
             }
           }
           
@@ -1606,7 +1674,7 @@ footer {
     }
   }
   .call-to-action1 {
-    height: 25vh;
+    height: 23vh;
     .call-title {
       margin-top: 3.5rem;
       font-size: 1.2rem;
@@ -1651,6 +1719,7 @@ footer {
   .contact {
     margin-bottom: 2rem;
     .container {
+   
       h1 {
         font-size: 2rem;
         p {
@@ -1659,21 +1728,40 @@ footer {
       }
     }
     .contact-container {
+   
       .contact-list {
+      
         margin-top: 5rem;
+        gap:0rem;
         div {
-          margin-right: 5rem;
-          margin-left: 5rem;
+          margin-right: 4rem;
+          margin-left:4rem;
           a {
             img {
               margin-top: 0.1rem;
-              width: 1.5rem;
+              width: 2rem;
             }
             span {
               font-size: 0.9rem;
             }
           }
         }
+       
+      }
+      .phone{
+        margin-right: 2rem;
+        margin-left: 2rem;
+        gap:3rem;
+        margin-top: 2rem;
+        a {
+          img {
+            margin-top: 0.1rem;
+            width: 2rem;
+          }
+          span {
+            font-size:1rem;
+          }
+        } 
       }
       .contact-btn {
         .btn {
@@ -1958,4 +2046,8 @@ footer {
       }
     }
   }
+}
+
+.show-img {
+  display: none;
 }
