--- a/css/style.css
+++ b/css/style.css
@@ -1323,7 +1323,7 @@ body {
     background-blend-mode: overlay;
     background-position: center center;
     margin-top: 5rem;
-    margin-bottom: 10rem;
+    margin-bottom: 5rem;
   }
   .ourstory .container h1 {
     margin-top: 2rem;
@@ -1338,14 +1338,15 @@ body {
     margin-bottom: 2rem;
   }
   .ourstory .container .story p {
-    font-size: 1.5rem;
+    margin-top: 5rem;
+    font-size: 1rem;
     line-height: 2rem;
     margin-left: 5rem;
     margin-right: 5rem;
   }
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1920px) {
   .ourstory {
     margin-top: 5rem;
   }
@@ -2050,7 +2051,7 @@ body {
 .contact .contact-container .contact-list {
   margin-top: 1rem;
   display: flex;
-  gap: 2rem;
+  gap: 1.5rem;
 }
 
 .contact .contact-container .contact-list div a {
@@ -2068,36 +2069,10 @@ body {
   width: 1.5rem;
 }
 
-.contact .contact-container .contact-list div a span {
+.contact .contact-container .contact-list div a .phone1 p {
+  color: #4D4B4B;
+  font-size: .7rem;
   margin-left: 1rem;
-  color: #4D4B4B;
-  font-size: 0.9rem;
-}
-
-.contact .contact-container .phone {
-  display: flex;
-  gap: 1rem;
-}
-
-.contact .contact-container .phone div a {
-  display: flex;
-  align-items: center;
-  margin-bottom: 1.5rem;
-}
-
-.contact .contact-container .phone div a .bx {
-  color: #4D4B4B;
-  font-size: 1.5rem;
-}
-
-.contact .contact-container .phone div a img {
-  width: 1.5rem;
-}
-
-.contact .contact-container .phone div a span {
-  margin-left: 1rem;
-  color: #4D4B4B;
-  font-size: 0.9rem;
 }
 
 .contact .contact-container .contact-btn {
@@ -2338,7 +2313,7 @@ footer .footer-copyright .container div {
     padding: 10px;
   }
   .gallery {
-    margin-top: 8rem;
+    margin-top: 5rem;
   }
   .gallery .container h1 {
     font-size: 2rem;
@@ -2764,6 +2739,7 @@ footer .footer-copyright .container div {
     display: flex;
   }
   .offer .container .drop-down .cards .card {
+    width: 11rem;
     margin-left: 3rem;
   }
   .offer .container .drop-down .cards .card img {
@@ -2874,15 +2850,16 @@ footer .footer-copyright .container div {
     gap: 0rem;
   }
   .contact .contact-container .contact-list div {
-    margin-right: 4rem;
-    margin-left: 4rem;
+    margin-right: 2rem;
+    margin-left: 2rem;
   }
   .contact .contact-container .contact-list div a img {
     margin-top: 0.1rem;
     width: 2rem;
   }
-  .contact .contact-container .contact-list div a span {
-    font-size: 0.9rem;
+  .contact .contact-container .contact-list div a .phone1 {
+    font-size: 1rem;
+    margin-left: 0rem;
   }
   .contact .contact-container .phone {
     margin-right: 2rem;
@@ -2994,6 +2971,33 @@ footer .footer-copyright .container div {
   }
   .home-header .container .moto a {
     font-size: 1.5rem;
+  }
+  .offer {
+    margin-top: 10rem;
+  }
+  .offer .container {
+    width: 80%;
+  }
+  .offer .container h1 {
+    font-size: 2rem;
+    margin-bottom: 3rem;
+  }
+  .offer .container h1 p {
+    margin-left: 10rem;
+    margin-right: 10rem;
+    font-size: 1rem;
+    margin-bottom: 3rem;
+  }
+  .offer .container .drop-down {
+    margin-top: 4rem;
+    display: flex;
+  }
+  .offer .container .drop-down .cards .card {
+    width: 15rem;
+    margin-left: 3rem;
+  }
+  .offer .container .drop-down .cards .card img {
+    width: 3rem;
   }
   .we-do .container {
     margin-top: 8rem;
