--- a/scss/_whoweare.scss
+++ b/scss/_whoweare.scss
@@ -39,7 +39,7 @@
         background-blend-mode: overlay;
         background-position: center center;
         margin-top: 5rem;
-        margin-bottom: 10rem;
+        margin-bottom: 5rem;
         
         .container {
      
@@ -60,7 +60,8 @@
             }
             .story{
                 p{
-                  font-size: 1.5rem;
+                    margin-top: 5rem;
+                  font-size: 1rem;
                   line-height: 2rem;
                   margin-left: 5rem;
                   margin-right: 5rem;
@@ -72,7 +73,7 @@
 
 }
 
-@include responsive($xl){
+@include responsive($xxl){
     
     .ourstory{
         margin-top: 5rem;
