--- a/css/style.css
+++ b/css/style.css
@@ -2857,7 +2857,7 @@ footer .footer-copyright .container div {
     margin-top: 0.1rem;
     width: 2rem;
   }
-  .contact .contact-container .contact-list div a .phone1 {
+  .contact .contact-container .contact-list div a .phone1 p {
     font-size: 1rem;
     margin-left: 0rem;
   }
