--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1725,8 +1725,11 @@ footer {
               width: 2rem;
             }
             .phone1 {
-              font-size: 1rem;
-              margin-left: 0rem;
+              p{
+                font-size: 1rem;
+                margin-left: 0rem;
+              }
+             
             }
           }
         }
