--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1509,6 +1509,7 @@ footer {
       .drop-down {
         margin-top: 4rem;
         display:flex;
+        justify-content: center;
         .cards{
           .card{
             width: 11rem;
